feat: Vulp Ops! Alter vulps to be more stock standard (#5)
* horror fox noises begone

changed vulp screams to the human ones

* main body changed to Paradise Station sprites

changed from wizden sprites to the ones that are more well known and well liked. Source is from DV, which they got from Paradise.

* remove displacements, change skin to pure white

Deleted displacement maps from the yml, and also set the skin tone to pure white.

* vulp marking whitelisting and tweaking

whitelisted vulps to tattoo and scar markings, and removed their specific eye markings as it will never get used.

* Missing tail and ear sprites from DV

added the wolf ears, fox tail, and otie tail from DV

* spill chance yml fix

title

--- a/Resources/Prototypes/Voice/speech_emote_sounds.yml
+++ b/Resources/Prototypes/Voice/speech_emote_sounds.yml
@@ -485,7 +485,7 @@
     Sigh:
       collection: MaleSigh
     Scream:
-      collection: VulpkaninScreams
+      collection: MaleScreams # Misfit - VulpkaninScreams to MaleScreams
     Growl:
       collection: VulpkaninGrowls
     Snarl:
@@ -513,7 +513,7 @@
     Sigh:
       collection: FemaleSigh
     Scream:
-      collection: VulpkaninScreams
+      collection: FemaleScreams # Misfit - VulpkaninScreams to MaleScreams
     Growl:
       collection: VulpkaninGrowls
     Snarl:
