feat: added speech corruption

--- a/Resources/Prototypes/_CD/Traits/traits.yml
+++ b/Resources/Prototypes/_CD/Traits/traits.yml
@@ -6,3 +6,6 @@
   components:
     - type: Synth
     - type: IonStormNotifier
+    - type: DamagedSiliconAccent
+      enableChargeCorruption: false
+      damageAtMaxCorruption: 100
