add liquid electricity, ethereal blood
added liquid electricity! It is extremely similar to slime blood. Damage modifiers is also included in this, but not used until color bug is fixed.

--- a/Resources/Prototypes/_Misfit/Entities/Mobs/Species/ethereal.yml
+++ b/Resources/Prototypes/_Misfit/Entities/Mobs/Species/ethereal.yml
@@ -15,6 +15,11 @@
     spawned:
     - id: FoodMeat
       amount: 5
+  - type: Bloodstream
+    bloodReagent: LiquidElectricity
+  #- type: Damageable # currently this makes them go urist skin color????
+    #damageContainer: Biological
+    #damageModifierSet: Ethereal
   - type: HumanoidAppearance
     species: Ethereal
     hideLayersOnEquip:
